--- a/tutorial.ipynb
+++ b/tutorial.ipynb
@@ -15,6 +15,23 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "# Initiate remote host"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# For Railway deployment, write the Procfile\n",
+    "# mlflow server --host 127.0.0.1 --port 8080"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "# Remote Connect"
    ]
   },
@@ -32,7 +49,7 @@
     }
    ],
    "source": [
-    "client = MlflowClient(tracking_uri=\"https://mlflowtemplate-production.up.railway.app/\")\n",
+    "client = MlflowClient(tracking_uri=\"https://mlflowtemplate-production.up.railway.app/\") # url of the mlflow server\n",
     "all_experiments = client.search_experiments()\n",
     "\n",
     "print(all_experiments)\n"
