--- a/tutorial.ipynb
+++ b/tutorial.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -37,14 +37,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[<Experiment: artifact_location='mlflow-artifacts:/434227754690581860', creation_time=1705343710876, experiment_id='434227754690581860', last_update_time=1705343710876, lifecycle_stage='active', name='MLflow Quickstart', tags={}>, <Experiment: artifact_location='mlflow-artifacts:/0', creation_time=1705343358653, experiment_id='0', last_update_time=1705343358653, lifecycle_stage='active', name='Default', tags={}>]\n"
+      "[<Experiment: artifact_location='mlflow-artifacts:/0', creation_time=1707975075250, experiment_id='0', last_update_time=1707975075250, lifecycle_stage='active', name='Default', tags={}>]\n"
      ]
     }
    ],
@@ -64,7 +64,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -114,16 +114,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "2024/01/15 13:35:12 INFO mlflow.tracking.fluent: Experiment with name 'MLflow Quickstart' does not exist. Creating a new experiment.\n",
+      "2024/02/15 11:37:25 INFO mlflow.tracking.fluent: Experiment with name 'MLflow Quickstart' does not exist. Creating a new experiment.\n",
+      "c:\\Users\\l501l\\AppData\\Local\\Programs\\Python\\Python38\\lib\\site-packages\\setuptools\\distutils_patch.py:25: UserWarning: Distutils was imported before Setuptools. This usage is discouraged and may exhibit undesirable behaviors or errors. Please use Setuptools' objects directly or at least import Setuptools first.\n",
+      "  warnings.warn(\n",
       "Successfully registered model 'tracking-quickstart'.\n",
-      "2024/01/15 13:35:19 INFO mlflow.store.model_registry.abstract_store: Waiting up to 300 seconds for model version to finish creation. Model name: tracking-quickstart, version 1\n",
+      "2024/02/15 11:37:35 INFO mlflow.store.model_registry.abstract_store: Waiting up to 300 seconds for model version to finish creation. Model name: tracking-quickstart, version 1\n",
       "Created version '1' of model 'tracking-quickstart'.\n"
      ]
     }
@@ -166,16 +168,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "'runs:/4b50598b930148b89d5cbfe7c733afcd/iris_model'"
+       "'runs:/68996b1241264091a4b38a5960a188c1/iris_model'"
       ]
      },
-     "execution_count": 10,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -187,7 +189,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -212,9 +214,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "c:\\Users\\l501l\\AppData\\Local\\Programs\\Python\\Python38\\lib\\site-packages\\tqdm\\auto.py:22: TqdmWarning: IProgress not found. Please update jupyter and ipywidgets. See https://ipywidgets.readthedocs.io/en/stable/user_install.html\n",
+      "  from .autonotebook import tqdm as notebook_tqdm\n",
+      "Downloading artifacts: 100%|██████████| 6/6 [00:00<00:00, 34.13it/s]\n"
+     ]
+    },
     {
      "data": {
       "text/html": [
@@ -286,8 +297,8 @@
        "</div>"
       ],
       "text/plain": [
-       "   sepal length (cm)  sepal width (cm)  petal length (cm)  petal width (cm)  \\\n",
-       "0                6.1               2.8                4.7               1.2   \n",
+       "   sepal length (cm)  sepal width (cm)  petal length (cm)  petal width (cm)   \n",
+       "0                6.1               2.8                4.7               1.2  \\\n",
        "1                5.7               3.8                1.7               0.3   \n",
        "2                7.7               2.6                6.9               2.3   \n",
        "3                6.0               2.9                4.5               1.5   \n",
@@ -299,7 +310,7 @@
        "3             1                1  "
       ]
      },
-     "execution_count": 3,
+     "execution_count": 10,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -307,7 +318,7 @@
    "source": [
     "# Load the model back for predictions as a generic Python Function model\n",
     "mlflow.set_tracking_uri(uri=\"https://mlflowtemplate-production.up.railway.app/\")\n",
-    "loaded_model = mlflow.pyfunc.load_model('runs:/1932e3c85d654ec1856320acb1be40ba/iris_model')\n",
+    "loaded_model = mlflow.pyfunc.load_model('runs:/68996b1241264091a4b38a5960a188c1/iris_model')\n",
     "\n",
     "predictions = loaded_model.predict(X_test)\n",
     "\n",
@@ -360,7 +371,8 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# End point (Different instance)"
+    "# End point (Different instance)\n",
+    "* Need to deploy with other instance but using the same mlflow tracking server"
    ]
   },
   {
